modify relative paths

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="This is my Spotify clone | welcome !" />
-    <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/utilities.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="shortcut icon" href="./Spotify/imgs/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./Spotify/css/reset.css" />
+    <link rel="stylesheet" href="./Spotify/css/utilities.css" />
+    <link rel="stylesheet" href="./Spotify/css/style.css" />
     <title>Spotify</title>
     <script
       src="https://kit.fontawesome.com/1106b272f3.js"
@@ -21,7 +21,7 @@
           <div class="logo">
             <img
               style="background-color: transparent;"
-              src="./imgs/logo.png"
+              src="./Spotify/imgs/logo.png"
               alt="logo"
             />
           </div>
